--- a/imports/client/styles/_main.scss
+++ b/imports/client/styles/_main.scss
@@ -5,7 +5,7 @@ $blue: #dfe7ed;
 $blue-alt: darken($blue, 15%);
 $red: #eddfdf;
 $red-alt: darken($red, 15%);
-$yellow: #FFFF33;
+$yellow: #ffffb3;
 $yellow-alt: darken($yellow, 15%);
 
 * {
